# QuantumAlgorithm

./: .gitignore  AGENTS.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  PAPER.md  README.md  REPORT.md  REPRODUCIBILITY.md  TASKS.md  pyproject.toml
.codex/: config.toml
.github/workflows/: ci.yml
examples/: compare_qiskit_vs_weighted.py  run_weighted_sabre_on_qasm.py
experiments/: __init__.py
experiments/legacy_rl/: README.md  __init__.py  il_train.py  rl_train.py
paper/: README.md  paper.md  references.bib
paper/tables/: ablation.csv  ablation.tex  main_results.csv  main_results.tex  main_results_latex.csv  main_results_latex.tex  significance_effect.csv  significance_effect.tex  variance.csv  variance.tex
prompts/: START_HERE.md
scripts/: __init__.py  bootstrap.py  doctor.py  fetch_qasmbench.py  run.py
tests/: test_action_masking.py  test_determinism.py  test_eval_summary_and_regression.py  test_gauntlet_qasm_requirements.py  test_hardware_model.py  test_il.py  test_invariants.py  test_metrics.py  test_multistep_residual.py  test_normalize_circuit.py  test_paired_deltas.py  test_proxy_validation.py  test_qasmbench_loader.py  test_qasmbench_loader_noise.py  test_qiskit_baselines.py  test_qiskit_pass.py  test_residual.py  test_rl.py  test_routing_env.py  test_run_eval_qiskit_trials.py  test_scoring.py  test_smoke_import.py  test_synthetic_generator.py  test_teacher.py  test_topologies.py  test_variance.py  test_weighted_distance.py  test_weighted_sabre.py  test_weighted_sabre_classical_bits.py
(+49 files in other folders)
