[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-routing-rl"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["qiskit>=1.0","numpy","networkx","pandas","pyarrow","matplotlib","torch","scipy"]

[project.optional-dependencies]
dev = ["pytest","ruff"]
paper = ["numpy","pandas","matplotlib","scipy"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"
